# omni

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: hooks.rs  lib.rs  visitor.rs
compiler/: Cargo.toml
crates/omni-ast/: Cargo.toml
crates/omni-ast/src/: ast.rs  lib.rs  main.rs
crates/omni-parser/: Cargo.toml
crates/omni-parser/src/: ast.rs  errors.rs  lexer.rs  lib.rs  omni.lalrpop  parser.lalrpop  parser.rs  tokens.rs
crates/omni-parser/test-schemas/: simple.omni
crates/omni-parser/test-schemas/00_prelude/: 00_prelude.omni
crates/omni-parser/test-schemas/01/: 01.omni
crates/omni-parser/test-schemas/02/: investy.omni  with-id.omni
crates/omni-parser/test-schemas/basic/: investy.omni
crates/omni-parser/tests/: prelude.rs
crates/omni-parser/tests/snapshots/: prelude__prelude_can_be_parsed.snap  prelude__prelude_can_be_parsed.snap.new  structs__structs_can_be_parsed.snap  structs__structs_can_be_parsed.snap.new
crates/omni-parser/tests/test-schemas/types/: structs.omni
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: ast.rs  omni.lalrpop  parser.rs  python.asdl
crates/parser/tests/: prelude.rs  structs.rs
crates/parser/tests/snapshots/: prelude__prelude_can_be_parsed.snap  structs__structs_can_be_parsed.snap
crates/parser/tests/test-schemas/jokes/: jokes.omni
docs/: design.md
examples/investing/: Makefile  README.md  omni.toml
examples/investing/omni/: main.omni
examples/node_simple/: Omni.toml
examples/simple/: Omni.toml  main.omni
examples/validation/: main.omni
omni_ast/: Cargo.toml
omni_codegen/: Cargo.toml
omni_codegen/src/: generate.rs  visitor.rs
omni_compiler/: Cargo.toml
omni_compiler/src/: context.rs  lib.rs
omni_parser/: Cargo.toml
omni_parser/src/: ast.rs  ast_util.rs  errors.rs  helpers.rs  lib.rs  omni.lalrpop  parser.rs  tokens.rs
omni_parser/tests/: operations.rs  service_and_operations.rs
omni_parser/tests/snapshots/: operations__operations_can_be_parsed.snap  prelude__prelude_can_be_parsed.snap  service_and_operations__services_can_be_parsed.snap  structs__structs_can_be_parsed.snap
omni_parser/tests/test-schemas/jokes/: jokes.omni
omni_parser/tests/test-schemas/types/: prelude.omni  service_and_operations.omni
omni_typescript/: Cargo.toml
omni_typescript/src/: lib.rs  ssdk.rs  templates.rs
omni_typescript/src/templates/: server.package.json.hbs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  omni.lalrpop  python.asdl
parser/tests/: prelude.rs  structs.rs
parser/tests/snapshots/: prelude__prelude_can_be_parsed.snap  structs__structs_can_be_parsed.snap
parser/tests/test-schemas/types/: operations.omni  structs.omni
src/: generate.rs  main.rs
tests/: investing.rs
tests-integration/: Cargo.toml
tests-integration/tests/: investing.rs
tests-integration/tests/investing/: typescript.rs
tests/examples/: mod.rs  simple.rs
tests/examples/expected/simple/: index.js  package-lock.json  package.json
tests/examples/node_simple/: compare.yml  mod.rs
tests/examples/node_simple/expected/: package.json
tests/examples/simple/: compare.yml  mod.rs
tests/examples/simple/expected/: package.json
typescript/: Cargo.toml
typescript/src/: templates.rs
typescript/src/templates/ssdk/: operation.hbs  tsconfig.json
