[package]
name = "omni"
version = "0.1.0"
edition = "2021"
description = "An IDL and Codegen tool to reduce client/server boilerplate"
keywords = [
	"idl",
	"smithy",
	"codegen",
	"cli"
]

[workspace]
members = [
	"omni_parser",
	"omni_ast",
	"omni_codegen",
	"omni_typescript",
]


[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
omni_parser = { path = "./omni_parser", version = "0.1.0" }
omni_codegen= { path = "./omni_codegen", version = "0.1.0" }
omni_typescript= { path = "./omni_typescript", version = "0.1.0" }

[dev-dependencies]
assert_cmd = "2.0.12"
dir-diff = "0.3.2"
havocompare = "0.5.1"
nextest = "0.0.0"



