[package]
name = "omni_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omni_parser= { path = "../omni_parser", version = "0.1.0" }
omni_codegen= { path = "../omni_codegen", version = "0.1.0" }
