[package]
name = "omni_parser"
version = "0.0.0"
authors = ["Daniel Cooke <danielcooke1996@gmail.com"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
omni_ast = { path = "../omni_ast", version = "0.0.0" }
logos = "0.13.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }




