[package]
name = "parser"
version = "0.1.0"
authors = ["Daniel Cooke <danielcooke1996@gmail.com"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"
serde = { version = "1.0.9", features = ["derive"] }

serde_json = { version = "1.0.9" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }




